<?xml version="1.0"?>
<package format="2">
	<name>teleop_command</name>
	<version>1.2.4</version>
	<description>
	This packade is for controlling the alphabot with the keyboard.
	</description>
	
	<maintainer email="mohankaushik97@gmail.com">Mohan Kaushik</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
</package>
